Update beberapa komponen dan layanan

--- a/frontend/my-react-app/.gitignore
+++ b/frontend/my-react-app/.gitignore
@@ -1,6 +1,5 @@
 # Menambahkan folder service agar tidak terdeploy
 service/
-
 # Logs
 logs
 *.log
@@ -15,6 +14,7 @@ node_modules
 dist
 dist-ssr
 *.local
+package-lock.json
 
 # Editor directories and files
 .vscode/*
