--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .js,.jsx",
+    "lint:fix": "eslint . --ext .js,.jsx --fix",
+    "build:analyze": "vite build --mode analyze",
+    "build:production": "vite build --mode production"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
@@ -40,6 +43,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.42.0",
     "vite": "^6.3.5"
   }
 }
