--- a/nixpack.toml
+++ b/nixpack.toml
@@ -1,2 +1,11 @@
 [phases.setup]
-nixPkgs = ["nodejs_20"]
+nixPkgs = ["nodejs", "npm"]
+
+[phases.install]
+cmds = ["cd frontend/my-react-app && npm ci"]
+
+[phases.build]
+cmds = ["cd frontend/my-react-app && npm run build"]
+
+[start]
+cmd = "cd frontend/my-react-app && npx serve dist -l 3000"
