--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -44,6 +44,7 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "terser": "^5.42.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-pwa": "^0.21.2"
   }
 }
