--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -26,6 +26,7 @@
     "jwt-decode": "^4.0.0",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.3",
