--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,25 +1,17 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Node modules — tidak perlu di-push
+node_modules/
+package-lock.json
 
+# File konfigurasi rahasia
 .env
-node_modules
-dist
-dist-ssr
-*.local
+service-account-key.json
+package-lock.json
+# Folder dengan data mentah atau output yang tidak perlu di-versi
+data/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Folder hasil build atau konten statis
+public/
+
+# Log & cache (jika berlaku)
+*.log
+.cache/
