--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "travu-backend",
+  "name": "tourism-recommendation-api",
   "version": "1.0.0",
-  "description": "Backend for Travu application",
+  "description": "Tourism recommendation system with Hapi.js, Firestore, and TensorFlow.js",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
-    "@hapi/boom": "^10.0.0",
-    "@hapi/hapi": "^21.1.0",
-    "@hapi/inert": "^7.0.0",
+    "@hapi/boom": "^10.0.1",
+    "@hapi/cookie": "^12.0.1",
+    "@hapi/hapi": "^21.3.2",
     "@hapi/joi": "^17.1.1",
-    "@hapi/jwt": "^3.0.0",
-    "bcrypt": "^5.1.0",
+    "@tensorflow/tfjs-node": "^4.13.0",
+    "bcrypt": "^5.1.1",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.5.0",
-    "mysql2": "^3.3.1",
-    "nodemailer": "^7.0.3",
-    "sequelize": "^6.28.0"
+    "firebase-admin": "^11.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "papaparse": "^5.5.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1"
   }
 }
